--- a/watch.html
+++ b/watch.html
@@ -168,25 +168,24 @@
                     </div>
                 </div>
     
-                <div class="row mt-4 px-2">
-                    <div class="col-lg-7 order-2 order-lg-1">
-                        <div class="comments">
-                            <div class="comments-details mb-3">
-                                <span>التعليقات 4</span>
-                                <span class="dropdown">
-                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
-                                      الترتيب بحسب
-                                    </button>
-                                    <div class="dropdown-menu">
-                                      <a class="dropdown-item" href="#">التاريخ</a>
-                                      <a class="dropdown-item" href="#">التعليقات الأجدد</a>
-                                    </div>
-                                </span>
-                            </div>
-                            <div class="public-comment">
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="إضافة تعليق عام"></textarea>
-                                <button type="submit" class="btn btn-info mt-3">تعليق</button>
-    
+                 <div class="row mt-4 px-2">
+                <div class="col-lg-7 order-2 order-lg-1">
+                    <div class="comments">
+                        <div class="comments-details mb-3">
+                            <span>التعليقات 4</span>
+                            <span class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
+                                  الترتيب بحسب
+                                </button>
+                                <div class="dropdown-menu">
+                                  <a class="dropdown-item" href="#">التاريخ</a>
+                                  <a class="dropdown-item" href="#">التعليقات الأجدد</a>
+                                </div>
+                            </span>
+                        </div>
+                        <div class="public-comment">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="إضافة تعليق عام"></textarea>
+                            <button type="submit" class="btn btn-info mt-3">تعليق</button>
                                 <div class="card mt-5 mb-3">
                                     <div class="card-body">
                                         <div class="row">
@@ -552,6 +551,7 @@
         </div>
     <script src="https://kit.fontawesome.com/597cb1f685.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>    <script src="js/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/index.js"></script>
     <script src="js/watch.js"></script>
